--- a/geography/R-spatstat.explore/Makefile
+++ b/geography/R-spatstat.explore/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.2 2024/12/01 08:56:26 mef Exp $
+# $NetBSD: Makefile,v 1.3 2025/02/08 09:32:21 mef Exp $
 
 R_PKGNAME=	spatstat.explore
-R_PKGVER=	3.3-3
+R_PKGVER=	3.3-4
 CATEGORIES=	geography
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -15,6 +15,12 @@ DEPENDS+=	R-spatstat.sparse>=3.1.0:../../geography/R-spatstat.sparse
 #EPENDS+=	R-spatstat.utils>=3.0.3:../../geography/R-spatstat.utils
 DEPENDS+=	R-abind>=1.4.5:../../math/R-abind
 DEPENDS+=	R-goftest>=1.2.2:../../math/R-goftest
+
+# Packages suggested but not available: 'sm', 'locfit', 'fftwtools'
+TEST_DEPENDS+=	R-gsl-[0-9]*:../../math/R-gsl
+TEST_DEPENDS+=	R-spatstat.linnet-[0-9]*:../../geography/R-spatstat.linnet
+TEST_DEPENDS+=	R-spatstat.model-[0-9]*:../../geography/R-spatstat.model
+TEST_DEPENDS+=	R-spatstat-[0-9]*:../../geography/R-spatstat
 
 USE_LANGUAGES=	c
 
