--- a/games/openrct2/Makefile
+++ b/games/openrct2/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.70 2025/01/22 09:40:07 triaxx Exp $
+# $NetBSD: Makefile,v 1.71 2025/02/08 09:43:19 triaxx Exp $
 
-PKGNAME=	openrct2-0.4.18
+PKGNAME=	openrct2-0.4.19.1
 CATEGORIES=	games
 
 DIST_SUBDIR=	openrct2-${PKGVERSION_NOREV}
@@ -15,10 +15,10 @@ DISTFILES+=	replays.zip
 EXTRACT_ONLY+=	openrct.tar.gz
 
 TITLE_SEQUENCE_VERSION=	0.4.14
-OBJECTS_VERSION=	1.4.12
+OBJECTS_VERSION=	1.5.1
 OPENSFX_VERSION=	1.0.5
 OPENMSX_VERSION=	1.6
-REPLAYS_VERSION=	0.0.84
+REPLAYS_VERSION=	0.0.86
 
 SITES.openrct.tar.gz= \
 	-https://github.com/OpenRCT2/OpenRCT2/archive/refs/tags/v${PKGVERSION_NOREV}.tar.gz
@@ -95,6 +95,7 @@ post-extract:
 
 .include "../../devel/cmake/build.mk"
 .include "../../archivers/libzip/buildlink3.mk"
+.include "../../audio/libvorbis/buildlink3.mk"
 .include "../../audio/speexdsp/buildlink3.mk"
 .include "../../devel/SDL2/buildlink3.mk"
 .include "../../devel/zlib/buildlink3.mk"
@@ -103,6 +104,7 @@ post-extract:
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
 .include "../../graphics/png/buildlink3.mk"
 .include "../../lang/libduktape/buildlink3.mk"
+.include "../../multimedia/libogg/buildlink3.mk"
 .include "../../security/openssl/buildlink3.mk"
 .include "../../sysutils/desktop-file-utils/desktopdb.mk"
 .include "../../textproc/icu/buildlink3.mk"
