--- a/games/vms-empire/Makefile
+++ b/games/vms-empire/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.17 2020/11/24 12:18:46 nia Exp $
+# $NetBSD: Makefile,v 1.18 2025/02/08 10:49:45 triaxx Exp $
 #
 
-DISTNAME=	vms-empire-1.15
+DISTNAME=	vms-empire-1.18
 CATEGORIES=	games
 MASTER_SITES=	http://www.catb.org/~esr/vms-empire/
 
@@ -10,8 +10,10 @@ HOMEPAGE=	http://www.catb.org/~esr/vms-empire/
 COMMENT=	Solitaire Empire (sometimes called "VMS Empire")
 LICENSE=	gnu-gpl-v2
 
+USE_TOOLS+=	gmake
+
 SUBST_CLASSES+=		makefile
-SUBST_STAGE.makefile=	pre-patch
+SUBST_STAGE.makefile=	pre-configure
 SUBST_MESSAGE.makefile=	Fixing hardcoded paths
 SUBST_FILES.makefile=	Makefile
 SUBST_SED.makefile=	-e 's,/usr,${PREFIX},g'
