--- a/security/crypto++/Makefile
+++ b/security/crypto++/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.25 2022/10/02 16:20:26 nros Exp $
+# $NetBSD: Makefile,v 1.26 2025/02/08 13:18:48 bsiegert Exp $
 
 DISTNAME=	cryptopp870
 PKGNAME=	cryptopp-8.7.0
+PKGREVISION=	1
 CATEGORIES=	security
 MASTER_SITES=	${HOMEPAGE}
 EXTRACT_SUFX=	.zip
@@ -14,6 +15,7 @@ LICENSE=	boost-license
 USE_LANGUAGES=		c++
 USE_TOOLS+=		gmake
 MAKE_FILE=		GNUmakefile
+BUILD_TARGET=		all libcryptopp.pc
 WRKSRC=			${WRKDIR}
 CPPFLAGS+=		-DCRYPTOPP_DISABLE_ASM -fPIC
 
