--- a/ham/gnuradio-network/Makefile
+++ b/ham/gnuradio-network/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.50 2024/12/29 15:09:52 adam Exp $
+# $NetBSD: Makefile,v 1.51 2025/02/08 13:35:40 wiz Exp $
 
 PKGNAME=	gnuradio-network-${VERSION}
-PKGREVISION=	12
+PKGREVISION=	13
 COMMENT=	Network blocks for GNU Radio
 
 .include "../../ham/gnuradio-core/Makefile.common"
