--- a/wm/leftwm/Makefile
+++ b/wm/leftwm/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.12 2024/10/21 13:47:57 pin Exp $
+# $NetBSD: Makefile,v 1.13 2025/02/08 14:53:24 pin Exp $
 
 DISTNAME=	leftwm-0.5.3
+# leftwm-0.5.4 requires Rust >= 1.83
 CATEGORIES=	wm
 MASTER_SITES=	${MASTER_SITE_GITHUB:=leftwm/}
 
