--- a/net/tlrc/Makefile
+++ b/net/tlrc/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.8 2024/07/31 18:04:33 pin Exp $
+# $NetBSD: Makefile,v 1.9 2025/02/08 15:21:17 pin Exp $
 
-DISTNAME=	tlrc-1.9.3
+DISTNAME=	tlrc-1.10.0
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_GITHUB:=tldr-pages/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
@@ -12,9 +12,7 @@ LICENSE=	mit
 
 .include "cargo-depends.mk"
 
-#RUST_REQ=	1.79.0
-#Upstream does not state the required MSRV.
-#This package is confirmed to build with Rust 1.79.0 on amd64
+RUST_REQ=	1.74.0
 INSTALLATION_DIRS=	${PKGMANDIR}/man1
 
 post-install:
